08-swagger-and-docs: add controllers
